--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="game-section">
             <h2 class="game-title">Crestfall</h2>
             <p class="game-description">
-                Embark on an epic journey in Crestfall, where ancient mysteries and modern warfare collide. 
-                This groundbreaking mobile and PC game combines strategic combat with deep storytelling, 
-                offering players an unforgettable gaming experience across all platforms.
+                Jebait your way to victory in this turn-based game of capture the flag. 
+                All board pieces are hidden at the start and you must capture territory, deploy pieces and use special abilities to outmaneuver your opponent. 
+                Bluff, bait and blunder your way to glory.
             </p>
             <div class="store-links">
                 <a href="#" class="store-link" title="Download on the App Store">
