--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
                 All board pieces are hidden at the start and you must capture territory, deploy pieces and use special abilities to outmaneuver your opponent. 
                 Bluff, bait and blunder your way to glory.
             </p>
+            
+            <div class="screenshots">
+                <h3 class="screenshots-title">Screenshots</h3>
+                <div class="screenshots-grid">
+                    <img src="images/screenshot1.jpg" alt="Crestfall Screenshot 1" class="screenshot">
+                    <img src="images/screenshot2.jpg" alt="Crestfall Screenshot 2" class="screenshot">
+                    <img src="images/screenshot3.jpg" alt="Crestfall Screenshot 3" class="screenshot">
+                </div>
+            </div>
+
             <div class="store-links">
                 <a href="#" class="store-link" title="Download on the App Store">
                     <svg class="store-icon" viewBox="0 0 24 24" fill="#ffffff">
