--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             <div class="screenshots">
                 <h3 class="screenshots-title">Screenshots</h3>
                 <div class="screenshots-grid">
-                    <img src="images/screenshot1.jpg" alt="Crestfall Screenshot 1" class="screenshot">
-                    <img src="images/screenshot2.jpg" alt="Crestfall Screenshot 2" class="screenshot">
-                    <img src="images/screenshot3.jpg" alt="Crestfall Screenshot 3" class="screenshot">
+                    <img src="images/screenshot1.png" alt="Crestfall Screenshot 1" class="screenshot">
+                    <img src="images/screenshot2.png" alt="Crestfall Screenshot 2" class="screenshot">
+                    <img src="images/screenshot3.png" alt="Crestfall Screenshot 3" class="screenshot">
+                    <img src="images/screenshot4.png" alt="Crestfall Screenshot 4" class="screenshot">
                 </div>
             </div>
 
