--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
         <div class="game-section">
             <h2 class="game-title">Crestfall</h2>
             <p class="game-description">
-                Jebait your way to victory in this turn-based game of capture the flag. 
-                All board pieces are hidden at the start and you must capture territory, deploy pieces and use special abilities to outmaneuver your opponent. 
-                Bluff, bait and blunder your way to glory.
+                Embark on an epic journey in Crestfall, where ancient mysteries and modern warfare collide. 
+                This groundbreaking mobile and PC game combines strategic combat with deep storytelling, 
+                offering players an unforgettable gaming experience across all platforms.
             </p>
             
             <div class="screenshots">
+                <h3 class="screenshots-title">Screenshots</h3>
                 <div class="screenshots-grid">
-                    <img src="images/screenshot2.png" alt="Crestfall Screenshot 2" class="screenshot" onclick="openLightbox(this)">
-                    <img src="images/screenshot3.png" alt="Crestfall Screenshot 3" class="screenshot" onclick="openLightbox(this)">
-                    <img src="images/screenshot4.png" alt="Crestfall Screenshot 4" class="screenshot" onclick="openLightbox(this)">
+                    <img src="images/screenshot2.png" alt="Crestfall Screenshot 1" class="screenshot" onclick="openLightbox(this)">
+                    <img src="images/screenshot3.png" alt="Crestfall Screenshot 2" class="screenshot" onclick="openLightbox(this)">
+                    <img src="images/screenshot4.png" alt="Crestfall Screenshot 3" class="screenshot" onclick="openLightbox(this)">
                 </div>
             </div>
 
@@ -40,7 +41,7 @@
                         <path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.6 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.16,10.81C20.5,11.08 20.75,11.5 20.75,12C20.75,12.5 20.53,12.9 20.18,13.18L17.89,14.5L15.39,12L17.89,9.5L20.16,10.81M6.05,2.66L16.81,8.88L14.54,11.15L6.05,2.66Z"/>
                     </svg>
                 </a>
-                <a href="https://store.steampowered.com/app/3366590/Crestfall" class="store-link" title="Available on Steam">
+                <a href="https://store.steampowered.com/app/3366590/Crestfall/" class="store-link" title="Available on Steam">
                     <svg class="store-icon" viewBox="0 0 24 24" fill="#ffffff">
                         <path d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C7.4,22 3.55,18.92 2.36,14.73L6.19,16.31C6.45,17.6 7.6,18.58 8.97,18.58C10.53,18.58 11.8,17.31 11.8,15.75L11.8,15.62L15.97,13.37C17.62,13.37 19,12 19,10.34C19,8.68 17.62,7.31 15.97,7.31C14.32,7.31 12.94,8.68 12.94,10.34L12.94,10.47L9.04,12.47C8.9,12.18 8.7,11.94 8.46,11.73L2.36,9.27C3.55,5.08 7.4,2 12,2M15.97,8.81C16.81,8.81 17.5,9.5 17.5,10.34C17.5,11.18 16.81,11.87 15.97,11.87C15.13,11.87 14.44,11.18 14.44,10.34C14.44,9.5 15.13,8.81 15.97,8.81M8.97,13.81C9.12,13.81 9.27,13.83 9.41,13.87L7.28,13.05C7.08,13.42 6.97,13.84 6.97,14.28C6.97,15.47 7.91,16.42 9.1,16.42C10.29,16.42 11.24,15.47 11.24,14.28C11.24,14.03 11.19,13.79 11.11,13.57L11.2,13.53L11.23,13.5L13.42,12.31C13.44,12.28 13.47,12.25 13.5,12.22L13.5,12.31C13.5,13.97 12.12,15.34 10.47,15.34L10.34,15.34L7.97,16.36C7.67,16.04 7.27,15.82 6.83,15.74L2.78,14.07C2.76,13.72 2.75,13.36 2.75,13C2.75,12.64 2.76,12.28 2.78,11.93L8.97,13.81Z"/>
                     </svg>
